Converted to Jquery

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./styles/style.css" />
 
-    <script type="text/javascript" src="./scripts/script.js"></script>
-
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script type="text/javascript" src="scripts/script.js" defer></script>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Raleway|Inter" />
@@ -21,7 +20,7 @@
     <div class="container col-md-10">
         <div class="content row">
             <div class="btn-wrapper col-md-6 d-flex justify-content-center">
-                <button type="button" class="button addBtn col-md-10" onclick="showTracking()">
+                <button type="button" class="button addBtn col-md-10" id="addTrackingBtn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-plus-circle" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -35,50 +34,7 @@
     </div>
 
     <script>
-        var count = 1
-
-        function showTracking() {
-            let content = document.getElementsByClassName('content')[0]
-            let length = document.getElementsByClassName('tracking-content').length
-            let tracking_content = `
-            <div id="box-${count}" class="tracking-wrapper col-md-6">
-                <div class="tracking-content">
-                    <form>
-                        <label for="companyID">Company ID: </label>
-                        <input type="text" id="companyID" name="companyID">
-                        <button type="button" onclick="" class="searchBtn ml-3">Search</button>
-                        <p></p>
-
-                        <label for="queueID">Queue ID: </label>
-                        <input class="mt-3" type="text" id="queueID" name="queueID">
-
-                        <input type="checkbox" id="chkInactive" name="chkInactive" value="inactive" class="ml-3">
-                        <label for="chkInactive"> Hide Inactive Queues</label><br>
-
-                    </form>
-                    <button type="button" class="button closeBtn" onclick="deleteTracking('box-${count}')">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x"
-                            viewBox="0 0 16 16">
-                            <path
-                                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-            `
-
-            if (length == 0) {
-                content.insertAdjacentHTML ('afterbegin', tracking_content)
-            } else {
-                document.getElementsByClassName('tracking-wrapper')[length - 1].insertAdjacentHTML('afterend', tracking_content)
-            }
-
-            count++;
-        }
-
-        function deleteTracking(box) {
-            document.getElementById(box).remove()
-        }
+        
 
     </script>
 </body>
