--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Raleway|Inter" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="./node_modules/chart.js/dist/Chart.js"></script>
 </head>
 
 <body>
-    <h2 class="site-title">Track Queue</h2>
+    <h2 class="site-title d-flex justify-content-center">Track Queue</h2>
 
-    <div class="d-flex justify-content-center" style="height: 500px; width: 1000px;">
-        <canvas  id="myChart"></canvas>
-    </div>
     <div class="container col-md-10">
         <div class="content row">
             <div class="btn-wrapper col-md-6 d-flex justify-content-center">
