--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="./node_modules/chart.js/dist/Chart.js"></script>
+    <script src="./node_modules/bootstrap-icons/bootstrap-icons.svg"></script>
 </head>
 
 <body>
