--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <h2 class="site-title d-flex justify-content-center">Track Queue</h2>
+    <h2 class="site-title d-flex justify-content-center">Customer Service Tracking</h2>
 
     <div class="container col-md-10">
         <div class="content row">
