Changed fonts to match actual company

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="./styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="./styles/fonts.css" />
 
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
@@ -14,9 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Raleway|Inter" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400|Montserrat:400&display=swap">
 
     <script src="./node_modules/chart.js/dist/Chart.js"></script>
-    <script src="./node_modules/bootstrap-icons/bootstrap-icons.svg"></script>
 </head>
 
 <body>
