styled pages to match company styling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 </head>
 
 <body>
+    <div class="logo-wrapper d-flex justify-content-center">
+        <img class="bliss-logo" src="blissworld-icon.png" alt="Bliss Logo">
+    </div>
     <h2 class="site-title d-flex justify-content-center">Customer Service Tracking</h2>
 
-    <div class="container col-md-10">
+    <div class="container col-md-12">
         <div class="content row">
             <div class="btn-wrapper col-md-6 d-flex justify-content-center">
                 <button type="button" class="button addBtn col-md-10" id="addTrackingBtn">
